--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 		}
 	</style>
 	<script>
-		var href;
-		if ( screen.height === 720 ) {
-			href = 'http://tv.emby.media/';
-		} else {
-			href = 'http://tv.emby.media/'
-		}
-		location.href = href + location.search + location.hash;
+		location.href = 'http://192.168.100.254:8096/web/index.html#!/movies.html?topParentId=fc690e84881af909332390c657a98c48';
 	</script>
 </body>
 </html>
